# sbi-epidemiology

./: README.md  pyproject.toml
notebooks/: bayesflow_sir.html  bayesflow_sir.ipynb
